--- a/app/globals.css
+++ b/app/globals.css
@@ -43,10 +43,6 @@
   --radius-xl: calc(var(--radius) + 4px);
 }
 
-body {
-  font-family: -apple-system;
-}
-
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
@@ -125,6 +121,22 @@ body {
   }
 }
 
+body {
+  font-family: -apple-system;
+}
+
 button {
   cursor: pointer;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
